log
vi., 10 de mar. de 2023  8:54:00: 
 tests:  0|7
total_score: 0/70
a0af0fa
Fri 10 Mar 2023 09:04:25 PM UTC: 
 tests:  0|7
total_score: 0/70
231292c
Fri 10 Mar 2023 09:30:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:8: error: unused variable ‘b2’ [-Werror=unused-variable]
   16 | int a2,b2;
      |        ^~
exercises.c:16:5: error: unused variable ‘a2’ [-Werror=unused-variable]
   16 | int a2,b2;
      |     ^~
cc1: all warnings being treated as errors
Compilation failed
f0f6eea
Fri 10 Mar 2023 09:32:17 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|6
total_score: 10/70
e0c10a1
Fri 10 Mar 2023 09:36:14 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
08b601b
Fri 10 Mar 2023 10:01:50 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:112:18: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  112 |      c[i] = a[i] + b[i];
      |             ~~~~ ^ ~~~~
      |              |      |
      |              Vector Vector
Compilation failed
c57e0fa
Sat 11 Mar 2023 03:17:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:112:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  112 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
e828f11
Sat 11 Mar 2023 03:23:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:112:13: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  112 |     *c = *a + *b;
      |          ~~ ^ ~~
      |          |    |
      |          |    Vector
      |          Vector
Compilation failed
d3b7cd1
Sat 11 Mar 2023 03:29:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:112:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  112 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
23c2fe4
Sat 11 Mar 2023 03:30:07 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:120:3: error: implicit declaration of function ‘fro’ [-Werror=implicit-function-declaration]
  120 |   fro(int i = 0)
      |   ^~~
exercises.c:120:7: error: expected expression before ‘int’
  120 |   fro(int i = 0)
      |       ^~~
exercises.c:120:17: error: expected ‘;’ before ‘}’ token
  120 |   fro(int i = 0)
      |                 ^
      |                 ;
  121 | }
      | ~                
cc1: all warnings being treated as errors
Compilation failed
c11bd00
Sat 11 Mar 2023 03:30:25 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
d8a2b75
Sat 11 Mar 2023 03:36:45 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:120:5: error: ‘Vector’ has no member named ‘x’
  120 |   c -> x = a1 + b1;
      |     ^~
exercises.c:121:5: error: ‘Vector’ has no member named ‘y’
  121 |   c -> y = a2 + b2;
      |     ^~
Compilation failed
8b3240d
Sat 11 Mar 2023 03:43:38 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:84:11: error: unused variable ‘local’ [-Werror=unused-variable]
   84 |   Vector *local = (Vector*) malloc(sizeof(Vector));
      |           ^~~~~
exercises.c: In function ‘sumaV2’:
exercises.c:124:6: error: assignment to ‘Vector *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  124 |   c  = a1 + b1;
      |      ^
exercises.c:125:6: error: assignment to ‘Vector *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  125 |   c  = a2 + b2;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
3d366db
Sat 11 Mar 2023 03:45:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:18: error: invalid initializer
   85 |   Vector datos = (int*) calloc(n,sizeof(int));
      |                  ^
exercises.c:85:10: error: unused variable ‘datos’ [-Werror=unused-variable]
   85 |   Vector datos = (int*) calloc(n,sizeof(int));
      |          ^~~~~
exercises.c:84:11: error: unused variable ‘local’ [-Werror=unused-variable]
   84 |   Vector *local = (Vector*) malloc(sizeof(Vector));
      |           ^~~~~
exercises.c: In function ‘sumaV2’:
exercises.c:124:6: error: assignment to ‘Vector *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  124 |   c  = a1 + b1;
      |      ^
exercises.c:125:6: error: assignment to ‘Vector *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  125 |   c  = a2 + b2;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
ef7fcd9
Sat 11 Mar 2023 03:45:26 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:18: error: invalid initializer
   85 |   Vector datos = (int*) calloc(n,sizeof(int));
      |                  ^
exercises.c:85:10: error: unused variable ‘datos’ [-Werror=unused-variable]
   85 |   Vector datos = (int*) calloc(n,sizeof(int));
      |          ^~~~~
exercises.c:84:11: error: unused variable ‘local’ [-Werror=unused-variable]
   84 |   Vector *local = (Vector*) malloc(sizeof(Vector));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0d04c03
